--- a/unidad1.html
+++ b/unidad1.html
@@ -44,8 +44,9 @@
     <!-- <script defer src="js/noCopy.js"></script> -->
 
     <!--Script para la carga de los contenidos-->
-    <script defer src="js/cargaContenidos/unidad1.js"></script>
     <script defer src="js/cargaContenidos/tabsPositioning.js"></script>
+    <script defer src="js/cargaContenidos/unidad1.js"></script>
+    <script defer src="js/cargaContenidos/redirectSelectUnit.js"></script>
 
     <!--Tutorial interactivo-->
     <script defer src="js/driver.min.js"></script>
@@ -76,11 +77,9 @@
             <div class="nav-wrapper navUnit1" id="menuIconUnity">
                 <a href="polilibro.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
-                <a class="brand-logo titleUnity white-text">Unidad 1&nbsp;&nbsp;
-                    <span class="border1 textoStandar titleUnityColorUnit1">
-                        Aspectos generales de un proyecto y el análisis del entorno
-                    </span>
-                </a>
+                <div class="brand-logo">
+                    <span class="titleUnity white-text">Unidad 1&nbsp;&nbsp;</span>
+                </div>
                 <!--Barra de progreso de lectura en modo computadora-->
                 <div class="progressContent hide-on-med-and-down">
                     <div class="determinate" id="progressReadingContent"></div>
