--- a/unidad3.html
+++ b/unidad3.html
@@ -46,6 +46,7 @@
     <!--Script para la carga de los contenidos-->
     <script defer src="js/cargaContenidos/tabsPositioning.js"></script>
     <script defer src="js/cargaContenidos/unidad3.js"></script>
+    <script defer src="js/cargaContenidos/redirectSelectUnit.js"></script>
 
     <!--Tutorial interactivo-->
     <script defer src="js/driver.min.js"></script>
@@ -76,11 +77,9 @@
             <div class="nav-wrapper navUnit3" id="menuIconUnity">
                 <a href="polilibro.html" data-target="mobile-demo" class="sidenav-trigger show-on-large"><i
                         class="material-icons">arrow_back</i></a>
-                <a class="brand-logo titleUnity white-text">Unidad 3&nbsp;&nbsp;
-                    <span class="border1 textoStandar titleUnityColorUnit3">
-                        Gestión técnica y ambiental del proyecto
-                    </span>
-                </a>
+                <div class="brand-logo">
+                    <span class="titleUnity white-text">Unidad 3&nbsp;&nbsp;</span>
+                </div>
                 <!--Barra de progreso de lectura en modo computadora-->
                 <div class="progressContent hide-on-med-and-down">
                     <div class="determinate" id="progressReadingContent"></div>
