Contents and select updated

--- a/index.html
+++ b/index.html
@@ -146,22 +146,44 @@
     <!--Seccion de la unidad de competencia-->
     <div id="test-swipe-2" class="mainTabs col s12 clgreyl1">
       <div class="cardDesign clw shadow2 border1">
-
         <section class="readyContentScreen">
           <p class="textoTitulo clbktx">Unidad de competencia</p>
-          <p class="textoStandar clbktx">
-            El propósito de la Unidad de Aprendizaje (UA) Administración de Proyectos es: formula el estudio
-            mercadológico, técnico y financiero de un proyecto de inversión, con base en la metodología de generación y
-            evaluación de proyectos. Para lograr el propósito planteado, la presente UA se abordará a partir de la
-            estrategia de aprendizaje orientada a proyectos así como del método heurístico.
+          
 
-          </p>
-          <p class="textoStandar clbktx">
-            Con el fin de obtener mejores resultados en cuanto a tu autoaprendizaje, te recomendamos estudiar cada una
-            de
-            las unidades temáticas en la secuencia en la que aparecen. Si deseas profundizar aún más en algún tema, te
-            sugerimos consultar la bibliografía detallada en el programa académico.
-          </p>
+          <div class="cardDesign clw border1">
+            <table class="highlight responsive-table white">
+              <thead>
+                <tr class="clgreyl2">
+                  <th class="center-align textoStandarTable" style="width: 20%;">Unidad</th>
+                  <th class="center-align textoStandarTable">Unidad de competencia</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="textoStandarTable">Unidad I</td>
+                  <td class="textoStandarTable">Identifica los aspectos generales de la formulación de proyectos informáticos a partir del planteamiento del problema.</td>
+                </tr>
+                <tr class="clgreyl1">
+                  <td class="textoStandarTable">Unidad II</td>
+                  <td class="textoStandarTable">Formula un estudio de mercado con base en la metodología Design thinking.</td>
+                </tr>
+                <tr>
+                  <td class="textoStandarTable">Unidad III</td>
+                  <td class="textoStandarTable">Formula la estructura técnica y ambiental del proyecto con base en su metodología, plan desarrollo y sostenibilidad.</td>
+                </tr>
+                <tr class="clgreyl1">
+                  <td class="textoStandarTable">Unidad IV</td>
+                  <td class="textoStandarTable">Formula los presupuestos requeridos en el proyecto con base en la inversión, ingresos, egresos y ventas.</td>
+                </tr>
+                <tr>
+                  <td class="textoStandarTable">Unidad V</td>
+                  <td class="textoStandarTable">Evalúa el proyecto informático con base en los indicadores financieros y la matriz de análisis integral.</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+        
           <div class="defaultImage">
             <div class="defaultImageContent" id="unidadCompetencia"></div>
           </div>
@@ -172,22 +194,68 @@
 
         <!--Contenido de carga de la página-->
         <section class="loadContentScreen"></section>
-
       </div>
     </div>
     <!--Seccion de la evaluación de los aprendizajes-->
     <div id="test-swipe-4" class="mainTabs col s12 clgreyl1">
       <div class="cardDesign clw shadow2 border1">
-
         <section class="readyContentScreen">
           <p class="textoTitulo clbktx">Evaluación de los aprendizajes</p>
-          <p class="textoStandar clbktx">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, obcaecati recusandae dignissimos
-            consequuntur itaque assumenda voluptas dicta aspernatur iusto suscipit quas! Quidem iusto beatae quaerat
-            cupiditate eum fuga omnis maiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum labore
-            minima excepturi incidunt voluptatibus culpa expedita quod explicabo, cumque voluptatum accusamus, similique
-            laboriosam magnam! Obcaecati harum nemo molestias adipisci quas?
-          </p>
+          <div class="cardDesign clw border1">
+            <table class="highlight centered responsive-table white">
+              <thead>
+                <tr class="clgreyl2">
+                  <th colspan="2" class="center-align textoStandarTable">1.er Parcial</th>
+                  <th colspan="2" class="center-align textoStandarTable">2-do Parcial</th>
+                  <th colspan="2" class="center-align textoStandarTable">3.er Parcial</th>
+                </tr>
+                <tr class="clgreyl1">
+                  <th colspan="2" class="center-align textoStandarTable">Unidad I y II</th>
+                  <th colspan="2" class="center-align textoStandarTable">Unidad III</th>
+                  <th colspan="2" class="center-align textoStandarTable">Unidad IV y V</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Actividad 1</td>
+                  <td>5%</td>
+                  <td>Actividad 3</td>
+                  <td>10%</td>
+                  <td>Actividad 5</td>
+                  <td>5%</td>
+                </tr>
+                <tr>
+                  <td>Actividad 2</td>
+                  <td>15%</td>
+                  <td>Actividad 4</td>
+                  <td>15%</td>
+                  <td colspan="2"></td>
+                </tr>
+                <tr class="clgreyl1">
+                  <td>Total</td>
+                  <td>20%</td>
+                  <td>Total</td>
+                  <td>25%</td>
+                  <td>Total</td>
+                  <td>5%</td>
+                </tr>
+                <tr class="divider"></tr>
+                <tr class="clgreyl2">
+                  <td colspan="3" class="center-align">Actividades</td>
+                  <td colspan="3" class="center-align">50%</td>
+                </tr>
+                <tr class="clgreyl2">
+                  <td colspan="3" class="center-align">Proyecto final</td>
+                  <td colspan="3" class="center-align">50%</td>
+                </tr>
+                <tr class="clgreyl3">
+                  <td colspan="3" class="center-align"><strong>Evaluación</strong></td>
+                  <td colspan="3" class="center-align"><strong>100%</strong></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
           <div class="defaultImage">
             <div class="defaultImageContent" id="evaluacionAprendizajes"></div>
           </div>
@@ -198,7 +266,6 @@
 
         <!--Contenido de carga de la página-->
         <section class="loadContentScreen"></section>
-
       </div>
     </div>
     <!--Sección de los requerimientos-->
