--- a/unidad3.html
+++ b/unidad3.html
@@ -45,7 +45,7 @@
 
     <!--Script para la carga de los contenidos-->
     <script defer src="js/cargaContenidos/tabsPositioning.js"></script>
-    <script defer src="js/cargaContenidos/unidad3.js"></script>
+    <script type="module" src="js/cargaContenidos/unidad3.js"></script>
     <script defer src="js/cargaContenidos/redirectSelectUnit.js"></script>
 
     <!--Tutorial interactivo-->
