Update contents, menus and activities

--- a/unidad2.html
+++ b/unidad2.html
@@ -177,7 +177,7 @@
                                     <p class="deskOption clbktx">Material de apoyo</p>
                                 </a>
 
-                                <a seccion-id="actividadesAprendizaje"
+                                <a seccion-id="actividades"
                                     class="deskOption navOptionsContent cardOpcionesMenuLateral waves-effect waves-light clgreyl2 border1 shadow2"
                                     id="a4tutorialButton">
                                     <i class="deskOption material-icons clbktx">fitness_center</i>
@@ -302,8 +302,8 @@
                     </li>
 
                     <!--Actividades-->
-                    <li seccion-id="12" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
-                        <a seccion-id="12" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
+                    <li seccion-id="actividades" style="cursor: pointer;" class="mobileOption navOptionsContentMobileMenu">
+                        <a seccion-id="actividades" class="mobileOption clbktx textoStandar truncate clgreyl1 border0">
                             <i class="material-icons clbktx">fitness_center</i>Actividades de aprendizaje
                         </a>
                     </li>
