--- a/unidad4.html
+++ b/unidad4.html
@@ -123,6 +123,10 @@
                                     <li>
                                         <div class="collapsible-header clgreyl2 clbktx"><i class="material-icons">local_library</i>Contenidos</div>
                                         <div class="collapsible-body">
+                                            <a seccion-id="introduccion"
+                                                class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
+                                                Introducción
+                                            </a>
                                             <a seccion-id="unidad4_1_presupuesto_inversion"
                                                 class="waves-effect waves-light clbktx deskOption navOptionsContent rememberStateUnit4 mainSectionMenu leftBorderUnit4">
                                                 4.1 Presupuesto de inversión 
@@ -255,6 +259,9 @@
                 <div class="truncate waves-effect clbktx clgreyl2 titleSectionMobileMenu" id="segundaSeccion"><i
                         class="material-icons" id="segundaSeccionIcon">expand_more</i><b>Contenidos</b>
                 </div>
+                <p seccion-id="introduccion"
+                    class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
+                    Introducción</p>
                 <p seccion-id="unidad4_1_presupuesto_inversion"
                     class="mobileOption navOptionsContentMobileMenu truncate waves-effect clbktx segundaSeccionHide">
                     4.1 Presupuesto de inversión</p>
