--- a/unidad1.html
+++ b/unidad1.html
@@ -311,7 +311,20 @@
 
         <!--Contenidos principales de texto-->
         <section id="lateralUnityContent" class="lateralUnityContentList clgreyl1">
-
+            <ul id="tabs-swipe-demo" class="tabs clgreyl2 shadow4">
+                <li class="tab clgreyl2" id="a6tutorialButton"><a class="clbktx active" href="#test-swipe-1">Introducción</a></li>
+                <li class="tab clgreyl2" id="a7tutorialButton"><a class="clbktx" href="#test-swipe-2">Unidad de competencia</a></li>
+                <li class="tab clgreyl2" id="a9tutorialButton"><a class="clbktx" href="#test-swipe-3">Evaluación de los aprendizajes</a></li>
+            </ul>
+            <div id="test-swipe-1" class="tabsContentContainerInfo">
+                <!-- ... contenido de Introducción ... -->
+            </div>
+            <div id="test-swipe-2" class="tabsContentContainerInfo" style="display: none;">
+                <!-- ... contenido de Unidad de competencia ... -->
+            </div>
+            <div id="test-swipe-3" class="tabsContentContainerInfo" style="display: none;">
+                <!-- ... contenido de Evaluación de los aprendizajes ... -->
+            </div>
         </section>
     </section>
 
